<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login"
     android:background="@color/white" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="60dp" 
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bier"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/orange"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/titelTit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titel"
            android:background="@color/darkOrange"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/titel"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:text="@string/loading"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/alcohol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alcohol"
            android:background="@color/darkOrange"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/alcoholDes"
            android:layout_width="match_parent"
            android:layout_height="36dp"
             android:text="@string/loading"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/brouwerij"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brouwerij"
            android:background="@color/darkOrange"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/brouwerijDes"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/loading"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/soort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soort"
            android:background="@color/darkOrange"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            />

        <TextView
            android:id="@+id/soortDes"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/loading"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/beschrijving"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beschrijving"
            android:background="@color/darkOrange"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/beschrijvingDes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/loading"
            android:textColor="@color/black"
            android:lines="6" />

    </LinearLayout>

</LinearLayout>